header and nav completed

--- a/styles/_btn.scss
+++ b/styles/_btn.scss
@@ -15,6 +15,7 @@ $btn-color: #5474FD;
         height: 63px;
         border: none;
         opacity: 80%;
+        margin-top: 35px;
     }
     &--book {
         width: 228px;
