--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -13,6 +13,11 @@ body {
     align-items: center;
     background-color: #333333;
 }
+.container {
+    max-width: 1770px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .header {
     background-image: url(../images/header.png);
     background-repeat: no-repeat;
@@ -57,8 +62,36 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     min-height: 75vh;
+    &__container {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    &__main {
+        display: flex;
+        flex-flow: column wrap;
+        max-width: 560px;
+    }
+    &__title {
+        padding: 10px;
+        margin-bottom: 15px;
+    }
+    &__info {
+        padding: 10px;
+        margin-top: 15px;
+    }
+    &__img {
+        display: inline-block;
+        &img--cottage, &img--mountain {
+            max-width: 350px;
+            margin: 5px;
+        }
+    }
 }
 
 .spain-1 {
