card styling added

--- a/styles/_btn.scss
+++ b/styles/_btn.scss
@@ -16,11 +16,13 @@ $btn-color: #5474FD;
         border: none;
         opacity: 80%;
         margin-top: 35px;
+        margin: 10px;
     }
     &--book {
         width: 228px;
         height: 63px;
         border: none;
         opacity: 80%;
+        margin: 10px;
     }
 }
