--- a/styles/_btn.scss
+++ b/styles/_btn.scss
@@ -2,6 +2,9 @@ $btn-color: #5474FD;
 
 .btn {
     background-color: $btn-color;
+    &:hover {
+        font-weight: 700;
+    }
     &--search {
         width: 153px;
         height: 60px;
