--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -10,8 +10,7 @@ Grey bg: #333333;
 Red check: #FF6363;
 
 */
-
-@import url('https://fonts.googleapis.com/css2?family=Aleo&family=Josefin+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Aleo:wght@400;700&family=Josefin+Sans:wght@400;700&display=swap');
 
 $main-txt-color: white;
 $main-font: 'Josefin Sans', sans-serif;
@@ -22,10 +21,12 @@ $header-font-size: 48px;
 $title-font-size: 36px;
 $sub-title-font-size: 20px;
 $ph-txt-color: #999999;
+$accent-color: #5474FD;
 
 body {
     color: $main-txt-color;
 }
+
 .btn {
     font-family: $sub-font;
     color: $main-txt-color;
@@ -78,6 +79,8 @@ body {
 }
 .nav {
     &__logo {
+        text-decoration: none;
+        color: $main-txt-color;
         font-family: $main-font;
         font-weight: 700;
         font-size: 24px;
@@ -101,7 +104,7 @@ body {
 .mid {
     &__icon--search {
         font-size: 60px;
-        color: #5474FD;
+        color: $accent-color;
     }
     &__icon--select {
         font-size: 60px;
@@ -110,5 +113,27 @@ body {
     &__icon--book {
         font-size: 60px;
         color: #00A2FF;
+    }
+}
+
+.card__title {
+    font-family: $main-font;
+    font-size: 20px;
+    letter-spacing: 1.5px;
+}
+.card__info {
+    font-family: $main-font;
+    font-size: $main-font-size;
+    line-height: 26px;
+}
+.review {
+    &__title {
+        font-family: $sub-font;
+        font-size: 36px;
+        text-align: center;
+    }
+    &__quote {
+        font-size: 36px;
+        color: $accent-color;
     }
 }
